@@ -157,7 +157,7 @@ auto_install-stamp:
 	mkdir -p $(TMP)/usr/share/doc/mysql-server-5.6
 	nm -n $(BUILDDIR)/sql/mysqld |gzip -9 > $(TMP)/usr/share/doc/mysql-server-5.6/mysqld.sym.gz
 	# This seems to be the only safe place to fix permissions issues
-        # not handled by dh_fixperms.
+	# not handled by dh_fixperms.
 	mkdir -p $(TMP)/etc/mysql/conf.d/
 	touch $(TMP)/etc/mysql/conf.d/.keepme
 	install -m 0755 debian/additions/echo_stderr $(TMP)/usr/share/mysql/
@@ -169,8 +169,10 @@ auto_install-stamp:
 	# install AppArmor profile
 	install -D -m 644 debian/apparmor-profile $(TMP)/etc/apparmor.d/usr.sbin.mysqld
 	chmod 0755 $(TMP)/usr/share/mysql-test/std_data/checkDBI_DBD-mysql.pl
-	# install Apport hook
-	install -D -m 644 debian/mysql-server-5.6.py $(TMP)/usr/share/apport/package-hooks/source_mysql-5.6.py
+	# install Apport hook for Ubuntu and derivatives
+	if dpkg-vendor --derives-from ubuntu; then \
+		install -D -m 644 debian/mysql-server-5.6.py $(TMP)/usr/share/apport/package-hooks/source_mysql-5.6.py; \
+	fi;
 	# chmod 0644 $(TMP)/usr/share/mysql/*.ini
 	chmod 0644 $(TMP)/usr/bin/mysqlaccess.conf
 	touch $@
